# redupe

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  fecsum-cli.c  redupe-cli.c  redupe-internal.h  redupe.c
include/: redupe.h
test/: calc_syndromes.cc  correct_errata.cc  correct_msg.cc  encode_msg.cc  find_errata_locator.cc  find_error_evaluator.cc  find_error_locator.cc  find_errors.cc  generator_poly.cc  gf_div.cc  gf_inv.cc  gf_mul.cc  gf_poly_add.cc  gf_poly_div.cc  gf_poly_eval.cc  gf_poly_mul.cc  gf_poly_scale.cc  gf_pow.cc  gf_sub.cc  th_main.cc
